# internal/delivery/web/organization/createEvent.go
@@ -3,19 +3,39 @@ package organization
 import (
 	"net/http"
 	"strconv"
+	"time"
 
+	"github.com/DKeshavarz/eventic/internal/entity"
 	"github.com/gin-gonic/gin"
 )
 
-type CreateEventResquest struct {
+type CreateEventRequest struct {
+	Title       string    `json:"title"`
+	Cost        int       `json:"cost"`
+	DateTime    time.Time `json:"datetime"`
+	Description string    `json:"description"`
+	Location    *string   `json:"location"`
+	PosterPic   *string   `json:"poster_pic"`
+	Link        *string   `json:"link"`
 }
 
 type CreateEventResponse struct {
+	CreatedEvent *entity.Event `json:"created_event"`
 }
 
+// @Description A company/organization creates an event, providing title, date, location, etc.
+// @Tags Organization
+// @Accept json
+// @Produce json
+// @Param id path int true "Organization ID"
+// @Param CreateEventRequest body CreateEventRequest true "Event creation payload"
+// @Security    BearerAuth
+// @Success 201 {object} CreateEventResponse
+// @Failure 400 {object} ErrorResponse "Invalid request or invalid organization ID"
+// @Failure 500 {object} ErrorResponse "Internal server error"
 // @Router /organization/{id}/event [post]
 func (h *Handler) CreateEvent(c *gin.Context) {
-	var req CreateEventResquest
+	var req CreateEventRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, DefaultErr(err.Error()))
 		return
@@ -42,8 +62,23 @@ func (h *Handler) CreateEvent(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, DefaultErr("Can't cast user userID to int"))
 		return
 	}
+	event := &entity.Event{
+		OrganizerID: orgID,
+		Title:       req.Title,
+		Cost:        req.Cost,
+		DateTime:    req.DateTime,
+		Description: req.Description,
+		Location:    req.Location,
+		PosterPic:   req.PosterPic,
+		Link:        req.Link,
+	}
 
-	userID++
-	// h.eventService.Create(userID,)
-	c.JSON(http.StatusCreated, orgID)
+	newEvent, err := h.eventService.Create(userID, event)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, DefaultErr(err.Error()))
+		return
+	}
+	c.JSON(http.StatusCreated, CreateEventResponse{
+		CreatedEvent: newEvent,
+	})
 }
